Apply height to foreground wrapper to prevent stretching
If something (such as a theme) applys height: auto; to the image it previously was stretched.

--- a/widgets/slider/styles/default.less
+++ b/widgets/slider/styles/default.less
@@ -34,8 +34,7 @@
 			& when ( isnumber( @slide_height ) ), ( isnumber( @responsive_breakpoint ) ) {
 				& {
 					display: flex;
-					justify-content: center;
-					align-content: center;
+					align-items: center;
 				}
 			}
 
